@@ -1,8 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.13.1
+VERSION=1.13.2
 
-DEPENDENCY="zeda=1.7.0;zm=1.7.0"
+DEPENDENCY="zeda=1.7.2;zm=1.7.1"
 
 # DAE (COLLADA)
 CONFIG_USE_DAE=y
